style.css
/*
Theme Name: Action pixel
Theme URI: http://theactionpixel.com
Description: Action Pixel blog
Author: Action Pixel
Author URI: http://theactionpixel.com
Version: 2.0
License: GNU General Public License v2 or later
License URI: http://www.gnu.org/licenses/gpl-2.0.html
Text Domain: twentyfifteen
*/

@import url('css/bootstrap.min.css');
@import url('css/carousel.css');

*{
	margin:0;
	padding:0;
	border:0;
}
body{
	font-family: 'Oxygen', sans-serif;
	background-color:#fff;
	padding:0;
}

li{
	list-style: none;
}

p{
	color:#808080;

}

/*----button-----*/
.ap-btn{
	background-color: #777;
	color:#fff;
}

/*-------- logo --------*/
.navbar-header{
    /*height: 90px*/
    min-height: 60px
    }

.navbar .brand{
    padding: 0 10px 0 0;
}

.navbar .nav > li > a {
    padding: 20px;
    /*padding: 35px 15px;*/
}

.navbar .btn-navbar {
    /*margin-right: 0px;*/
    margin-top:15px;
}
.brand img{
    margin-top: 5px;
    width: 150px;
}

@media (max-width:768px) {
    .brand img{
        margin-bottom: 5px
    }
    .navbar .btn-navbar{
        /*margin-right: -15px;*/
    }
    .navbar .nav > li > a {
        padding: 10px 15px;
    }
}
/*-----------------------*/


/*-----main nav-----*/
.navbar-default {
    background-color:#262626;
    border-color: #e7e7e7;
}
.navbar .nav,
.navbar .nav > li a{
 	text-transform: uppercase;
 	font-weight: bold;
}
.navbar .nav li a:hover{
	color:#ff6600;
	background-color: #f5f5f5;
}
.navbar-default .navbar-nav > .active > a,
.navbar-default .navbar-nav > .active > a:hover,
.navbar-default .navbar-nav > .active > a:focus{
	color:#ff6600;
	padding: 20px;
    background-color: #f5f5f5;
}
.navbar{
	margin-bottom:0;
}

.social-media{
    text-align: center;
}

.navbar-form{
    padding: 5px 0 0 20px;
}

/*--------------------*/


/*----header banner----*/
.image-container{
	position: relative;
	width: 100%;
    height: 450px;
	overflow: hidden;
	border-top: 4px solid #fff;
}

.image-container img{
	width: 100%;
}

.header-info{
	position: absolute;
	top:200px;
	left: 0;
	width: 50%;
	letter-spacing: -1px;
   	background: rgb(0, 0, 0); /* fallback color */
   	background: rgba(0, 0, 0, 0.7);
   	padding: 10px;
   	color: white;
}
.header-info h1 {
    font-family: 'Oswald', sans-serif;
   	text-transform: uppercase;
   	font-weight: 300;
   	margin: 0;
    line-height:110%;
    margin-bottom: 10px;
}
.header-info h1 a{
	color:#ff6600;
}
.header-info p{
	color: #fff;
   	font: bold 14px Helvetica, Sans-Serif;
}

.subtitle{
    font-family: 'Oswald', sans-serif;
    font-size: 16px;
    font-weight: 800;
    padding: 0px 0 20px;
    display: inline-block;
    letter-spacing: 1px;
    text-transform: uppercase;
}

@media (max-width:768px) {
    .image-container{
        position: relative;
        width: 100%;
        height: auto;
        border-top: 4px solid #fff;
    }
    .header-info{
    	position: relative;
    	top: 0;
        width:100%;
    }
}

@media (max-width:992px) {
    .image-container{
        position: relative;
        width: 100%;
        height: auto;
        border-top: 4px solid #fff;
    }
    .header-info{
    	position: relative;
    	top: 0;
        width:100%;
        height:auto;
    }
}

/*-------------------*/

.main{
	margin-bottom:20px;
	margin-top:20px;
	border:0px solid #ccc;
}

.thumbnail{
 	padding: 0;
    margin: 10px 0 10px 0;
}

.thumbnail-img-container{
    border: 0px solid black;
    height: 210px;
    overflow: hidden;
}

.well{
	margin:0px;
	padding: 5px;
	border:0;
}
.well span {
	color: #808080;
	padding: 10px 5px 10px;
	display: inline-block;
    font-size:14px;
}

.caption{
	margin: 0;
	background-color: #f5f5f5;
}
.caption h3{
    font-family: 'Oswald', sans-serif;
    padding: 0;
    margin:5px 0 15px;
	font-weight: 200;
	text-transform: uppercase;
}
.caption h3 a{
	color:#ff6600;
}

@media (min-width:320px) {
    .thumbnail{
        border: 0;
    }
    .thumbnail img {
        width: 100%;
    }
    .thumbnail-img-container{
        border: 0px solid black;
        height: auto;
    }
}

@media (max-width:320px) {
    .thumbnail{
        border: 0;
    }
    .thumbnail img {
        width: 100%;
    }
    .thumbnail-img-container{
        border: 0px solid black;
        height: auto;
    }
}

@media (max-width:768px) {
    .thumbnail{
        border: 0;
    }
    .thumbnail img {
        width: 100%;
    }
}

@media (max-width:992px) {
    .thumbnail img {
        width: 100%;
    }
}

/* page.php*/
.page-wrapper{
    min-height: 700px;
    text-align: center;
}
.page-wrapper img{
    padding: 20px 0 20px;
}
.page-wrapper p{
    font-size: 1.2em;
}


/* category page */
.category-header{
    text-align: center;
    color: #808080;
    padding: 20px 0 20px;
    border-bottom: 4px solid #ff6600;
    background-color: #f5f5f5;
}
.category-header h1{
    font-weight: 800;
    text-transform: uppercase;
}


/* blog single page */

.blog-container{
    padding: 10px;
    border: 1px solid black;
}

.blog-header{
    position: absolute;
    bottom:0;
    left: 0;
    width: 50%;
    letter-spacing: -1px;
    background-color:#fff;
    padding: 10px;
}

.blog-header h1{
    font-family: 'Oswald', sans-serif;
    color:#ff6600;
    font-weight: 300;
    text-transform: uppercase;
}
.blog-header .well{
    margin: 10px 10px 0 0;
}

.blog-info{
    margin:20px 0 0 0;
    padding: 0px;
    border:0;
    background-color: #fff;
}
.blog-info span {
    color: #808080;
    margin: 0 10px 0 0;
    display: inline-block;
    font-size: 1em;
    text-align: center;
}


.blog-post{
    width: 100%;
    margin: 40px 0 40px;
    font-size: 16px;
}
.blog-post p{
    line-height:180%;
}

.embed-responsive{
    margin-bottom: 20px;
}

@media (max-width:768px) {
    .blog-header{
        position: relative;
        width: 100%;
    }
    .blog-header h1{
        font-size: 1.8em;
    }
}

@media (max-width:992px) {
    .blog-header h1{
        font-size: 1.8em;
    }
    p.blog-description{
        font-size: 1em;
    }
}


/*---------sidebar-----------*/
.sidebar-container{
    margin: 40px 0 40px;
}

.sidebar-container h2{
    text-align: center;
    background-color: #f5f5f5;
    padding: 15px;
    border-bottom: 2px solid #ff6600;
    text-transform: uppercase;
    color: #808080;
    font-size: 16px;
    font-weight: 800;
}
.sidebar-container h4{
    background: rgb(0, 0, 0); /* fallback color */
    background: rgba(0, 0, 0, 0.7);
    padding: 10px;
    text-align: center;
    position: absolute;
    bottom: 0;
    left: 0;
}
.sidebar-container img {
    width: 100%;
}

.sidebar-img-container{
    position: relative;
    display: inline-block;
    overflow: hidden;
    width: 100%;
    height: 180px;
    margin: 0 0 20px;
    border: 0px solid black;
}

.sidebar-container h4 a{
    color: #fff;
}

@media (max-width:768px) {
    .sidebar-container img {
        width: 100%;
    }
}

/* pagination */

ul.page-numbers {
    margin: 40px 0 40px;
    width: 100%;
    padding: 0;
    font-size: 12px;
    line-height: normal;
    clear: both;
    float: left;
}

ul.page-numbers li {
       float: left;
    }

ul.page-numbers a,
ul.page-numbers span {
    border-radius: 3px;
    -moz-border-radius: 3px;
    -webkit-border-radius: 3px;
    background: -webkit-gradient(linear, left top, left bottom, from(#E4E3E3), to(#FFFFFF));
    background: -moz-linear-gradient(top,  #E4E3E3,  #FFFFFF);
    filter:  progid:DXImageTransform.Microsoft.gradient(startColorstr='#E4E3E3', endColorstr='#FFFFFF');
    padding: 15px;
    margin: 2px;
    text-decoration: none;
    border: 1px solid #ccc;
    color: #666;
    font-weight: 800;
}

ul.page-numbers a:hover,
ul.page-numbers span.current {
    border: 1px solid #ff6600;
    color: #ff6600;;
}

/*---------footer------------*/
.footer{
	padding:0;
	margin:0;
	border-top: 2px solid #ccc;
	text-align: center;
    background-color: #262626;
}
.footer .navbar-nav{
	margin-top: 15px;
}
.footer .navbar-nav li a{
	font-size: 0.8em;
	display: inline;
	margin-top:10px;
    text-transform: uppercase;
    color: #ff6600;
}
.footer .navbar-nav li a:hover{
	background-color: transparent;
}

.footer_copyright{
	margin:15px;
	display: block;
	color: #ff6600;
}

.current{
	color:#ff6600;
	background-color: #ccc;
}

/* 404.php */

.error-container{
    padding: 20px;
	background-color: #f8f8f8;
	border-top-left-radius:5px;
	border-bottom-left-radius:5px;
	border-top-right-radius:5px;
	border-bottom-right-radius:5px;
    border: 1px solid #ff6600;
	margin-top: 100px;
}
.error-container h1{
    color:#ff6600;
    font-weight: bold;
}
/*-------------*/

/* search.php */


/* fb-comment */
.fb-comments{
    border: 0px solid black;
    width: 100%;
}


/* Embeded video reponsive */
.video-container {
    position: relative;
    padding-bottom: 56.25%;
    height: 0;
    overflow: hidden;
}
.video-container iframe, .video-container object,
.video-container embed, .video-container video {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
}


/* advertise */

.leaderboard{
    border: 0px solid black;
    width: 100%;
    height: auto;
}

